Fixed member img stretching

--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,6 @@ nav {
 }
 
 .navbar-wrapper {
-
     float: right;
     height: 50px;
     width: 50px;
@@ -260,7 +259,8 @@ nav {
     height:200px;
     overflow:hidden;
     margin-top: 30px;
-    margin-right: 30px;
+    margin-right: 15px;
+    margin-left:15px;
     transition: all .2s ease-in-out;
 }
 /*
@@ -447,7 +447,8 @@ h1 {
 }
 
 .member img{
-  width: 50%;
+  width: 230px;
+  height: 230px;
   border-radius: 100%;
 
 
